fixing projects height on iphone

--- a/src/static/styles/homepage/work.css
+++ b/src/static/styles/homepage/work.css
@@ -13,6 +13,8 @@
   .project {
     width: 92%;
     height: 20%;
+    min-height: 20%;
+    box-sizing: border-box;
     text-align: center;
     border: 3px solid black;
     margin: 2%;
